# Energychief

./: .cache.sqlite  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_PROMPT.md  Dockerfile  EnergyML.py  PLAN.md  README.md  app.py  config.py  consumption_model.pkl  dataprep.py  docker-compose.yml  get_weather.py  main.py  pyproject.toml  recs_data.csv  serve.py  supervisor.ini
alembic/: env.py
alembic/versions/: 7adadfca625d_add_site_name_to_meters.py  bb84e8355ce8_initial_schema.py  c8f6d37afde0_initial_schema.py
backend/: enode_api.py  enode_webhook_handler.py  manage_webhooks.py  rec_monitor.py
bot/: bhandlers.py  database.py  handlers.py  messages.py
docs/: Enode_webhook.md
frontend/: messages.py  telegram_app.py  validators.py
frontend/handlers/: enode.py  general.py  rec.py  setup.py
shared/: config.py  database.py  engine.py  gse_api.py  models.py
src/energychief/: __main__.py  config.py
src/energychief/adapters/: base.py  enode.py
src/energychief/bot/: messages.py
src/energychief/bot/handlers/: onboarding.py  start.py
src/energychief/db/: connection.py  repository.py  schema.sql
src/energychief/services/: forecast.py  notifier.py  polling.py  weather.py
src/energychief/utils/: pod.py
