[project]
name = "energychief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
